fix: test and avoid memory leaks by checking references to virtual kernel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ dev = [
     "dask[dataframe]; python_version < '3.7'",
     "playwright; python_version > '3.6'",
     "pytest-playwright; python_version > '3.6'",
+    "objgraph",
 ]
 assets = [
     "solara-assets==1.25.0"
